--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -17,7 +17,7 @@
         <li><a href="#about">Configuration</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="navbar-text">Hello, User Name</li>
+        <li><a href="">Hello, User Name</a></li>
         <li><a href="">Sign out</a></li>
       </ul>
     </div>
